fixed background for sections

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -47,7 +47,6 @@
 			<p class="bigtext1">“New hybrids of design are emerging. People don’t fit in neat categories; they’re a mixture of artists, engineers, designers, thinkers.”<sup>16</sup></p>
 			<p>This paper posits that the terrain of design practice, education, and research, and its subsequent points of inquiry, are continuing to shift and extend well beyond the boundaries of the (single) discipline. That is, the discipline that was once recognized and acknowledged as design, which was born of the split of idea from manufacture, now has little to do with manufacture and a single idea.</p>
 			<p>Now the idea of design includes multiple disciplinary perspectives (i.e. multidisciplinarity) to cross-disciplinary pursuits, to the get-together of interdisciplinarity to the bricolage of transdisciplinarity and now beyond—to alter-disciplinarity, where globalization and the explosion of digital possibilities has resulted in connections that are no longer ‘in the middle of ...,’ cannot be measured ‘across,’ nor encompass an ‘entire system.’ As such, the digital has generated an ‘other’ dimension, so we might now need to consider ‘alter-disciplinarity’ or ‘undisciplinarity’ as the most effective approach in the research required for a future of design.</p>
-				</section>
 	<section class="normal">
 		<div class="stickytitle"><h3>An Alternative Disciplinary <span id="subtitle-alternative">(‘Alterplinary’) Future Manifesto</span></h3></div>
 			<p>As a way forward for the discipline of design, the authors propose an ‘alterplinary’manifesto (a portmanteau of ‘alternative’ and ‘disciplinary’). Alterplinarity is the condition contemporary design finds itself in.[17] The fluid, evolving muddle of practice that regularly cross, exceed and alter historical disciplinary and conceptual boundaries has resulted in research, education, and practice that is constantly shifting, creating, contesting and negotiating new terrains of opportunities and re-shaping the boundaries of design.</p>
@@ -55,7 +54,6 @@
 			<p>The digital has modified the models of design thought and action, and, as a result, research and practice should transform from a convention domesticated by the academy to a reaction to globalization that is yet to be disciplined.</p>
 	<div class="stickytitle"><h3>This Is The ‘Alterplinary’ Manifesto:</h3></div>
 	<div class="stickytitle"><h4>01 Dispose Carefully of What You Know</h4></div>
-	
 	<section class="withbackground">
 		<p>All design thought and action should emanate from a point of not knowing. Socrates, the Greek philosopher, is attributed to have said that:</p>
 		<p class="bigtext1">“The only true wisdom is in knowing you know nothing.”</p>
@@ -147,19 +145,21 @@
 		<p>An answer requires knowing what to look for, and perhaps we shouldn’t look at the means of enhancement (talent identification and education), or enhancing the means (augmented digital representation), which both pursue the ideal. If we look from outside the regime, then the ideal designer is playing to a skeptical public (“Nothing seems to be getting better ...”) with little trust in the idea of design (especially since everyone knows what needs to be done).</p>
 		<p>So without an idea of design, the ideal (an imitation of design) is now a fragile media invention with no moral reference. Further, now that the idea of the discipline of design doesn’t seem to exist, and its ideal exists on an other playing field defined by the media—an alternative playing field playing an alterplinary discipline.[36] The net result is the ideal has no feel for the idea, and the idea has no effect on the ideal. If we accept this scenario, we have to ask whether we still participate in the idea of design?</p>
 	</section>
-	<section class="frontsection3">
 	<div class="stickytitle5"><h3>Conclusion</h3></div>
+	<section class="frontsection3">
 		<p>We have argued that the discipline of design has been superseded by a condition where the conventionally defined design disciplines have been dispersed. Moreover, this reliance on the ‘exhausted’ historic disciplines as the boundary of our understanding has been superseded by an unlimited expanse that we call ‘alterplinarity.’[37] </p>
 		<p>As a consequence, this paper presents a manifesto for a future design discipline where the emphasis is on understanding how little we know and recognizing that the unknown is a necessary condition for the beginning of any project. That is, as design researchers and educators, we should focus on what we do not know and move away from current models of design education that largely result in imitation and derivation as the norm, whilst also reminding ourselves that design must be taken seriously at all times.</p>
 		<p>This seriousness is inherent in the new strategy we require for design. A strategy that reconnects design with its historic project</p>
 		<p class="bigtext1">—to imagine change and to answer the unavoidable question—what kind of world do we really want to live in? </p>
 		<p> Contentiously, perhaps, we also propose that we need to object to sustaining everything. Design would be better off rejecting sustainability and concentrating on finding ways of us being together on such a populous planet in such unprecedented proximity staring at many other major crises. As such, design now needs to disrupt, contest, invent, direct, coordinate, respond, provoke and project.</p>
-		<p>The complex and interdependent issues we face today need undisciplined and irresponsible designers who act in productively irresponsible ways. With that stated, we must also endeavor to design with care and remember that, like design, the purpose of care is to affect positively the way we live. Finally, designers need to confront what most of them avoid—the past—and also accept that if design no longer needs an idea, should design still participate in the idea of design?</p>
+		<p span id="lastparagraph">The complex and interdependent issues we face today need undisciplined and irresponsible designers who act in productively irresponsible ways. With that stated, we must also endeavor to design with care and remember that, like design, the purpose of care is to affect positively the way we live. Finally, designers need to confront what most of them avoid—the past—and also accept that if design no longer needs an idea, should design still participate in the idea of design?</p>
 	</section>
-			<section class="readnext">
-				<h3 span id="readnexttext">Read next</h3>
-				<h2 span id="nextarticle">Graphic Design’s Factory Settings</h2>
-			</section>
+</section>
+	<section class="readnext">
+			<h3 span id="readnexttext">Read next</h3>
+			<h2 span id="nextarticle">Graphic Design’s Factory Settings</h2>
+		</section>
+	</section>
 			</article>
 	</body>
 </html>
