Landing page added nav bar and fixed header

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -18,6 +18,15 @@
 			<h2 span id="titlecontinue">& Other Diatribes</h2>
 			<h3>Ch.2 &nbsp; &nbsp; &nbsp;Hal Foster  &nbsp; &nbsp; &nbsp;2000</h3>
 		</header>
+		<div id="navbar">
+			<a href="../">Home</a>
+			<a href="../article-crime/"><mark>Crime</mark></a>
+			<a href="../article-factory/">Factory</a>
+			<a href="../article-discipline/">Discipline</a>
+		  </div>
+		  <div id="backtotop">
+			<a href="#top" span id="arrow">&#x21E7;</a>
+		</div>
 	<!-- Article for Crime and Design -->
 	 <article>
 		<section class="normal">
