--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -20,6 +20,15 @@
 		</div>
 			<h3>Jacob Lindgren &nbsp; &nbsp; &nbsp;2020</h3>
 		</header>
+		<div id="navbar">
+			<a href="../">Home</a>
+			<a href="../article-crime/">Crime</a>
+			<a href="../article-factory/"><mark>Factory</mark></a>
+			<a href="../article-discipline/">Discipline</a>
+		  </div>
+		  <div id="backtotop">
+			<a href="#top" span id="arrow">&#x21E7;</a>
+		</div>
 	<!-- Article for Factory Settings -->
 	 <article>
 		<section class="normal">
