--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-<!-- Header for direction1 and direction2 -->
+		<div id="navbar">
+			<a href="../"><mark>Home</mark></a>
+			<a href="../article-crime/">Crime</a>
+			<a href="../article-factory/">Factory</a>
+			<a href="../article-discipline/">Discipline</a>
+		  </div>
 		<header>
 			<div>
 			<div class="crime"><h1>Crime</h1></div>
