Edited the design for landing page header

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 			<a href="../article-discipline/">Discipline</a>
 		  </div>
 		<header>
-			<div>
-			<div class="crime"><h1>Crime</h1></div>
-			<div class="factory"><h1>Factory</h1></div>
-			<div class="discipline"><h1>Discipline</h1></div>
+			<div id="headertext">
+			<div class="crime"><h1><span id="crime">Crime.</span></h1></div>
+			<div class="factory"><h1>Factory.</h1></div>
+			<div class="discipline"><h1>Concept.</h1></div>
 			</div>
+			<div class="container-text"><h2>Evolution of Design</h2></div>
 		</header>
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
