Added subheading inside a div

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="factory"><h1>Factory.</h1></div>
 			<div class="discipline"><h1>Concept.</h1></div>
 			</div>
-			<div class="container-text"><h2>Evolution of Design</h2></div>
+			<section class="container-text"><p id="subtitle">Evolution of Design Function</p></div>
 		</header>
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
@@ -32,10 +32,5 @@
 				<p class="intropa">Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
 				<p>Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be designers in society and in relation to capital,” writes designer Jacob Lindgren. “A school becomes a factory producing designers, one that, in keeping with the principles of ‘good design,’ turns them into efficient and interchangeable parts ready to hit the market.” In a new essay, Lindgren proposes models that may help us undo this factory setting of graphic design.</p>
 			</article>
-		<footer>
-			<h1 class="footer"><mark>Intro and web by</mark></h1>
-			<!--<h1 class="footer">Intro and web by</h1>-->
-			<h1 class="authorfooter">Bulgan Bee</h1>
-		</footer>
 	</body>
 </html>
