edited the loop animation

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 		<header>
 			<div class="headertext">
 			<div class="crime">
-				<h1>Design & <span id="crime">Crime</span></h1>
-				<h1>Design & <span id="crime">Crime</span></h1>
+				<h1><span id="crime">Crime</span></h1>
 				<h1>Design & <span id="crime">Crime</span></h1>
 				<h1>Design & <span id="crime">Crime</span></h1>
 				<h1>Design & <span id="crime">Crime</span></h1>
@@ -31,15 +30,13 @@
 				<h1><span id="factory">Factory</span> Settings</h1>
 				<h1><span id="factory">Factory</span> Settings</h1>
 				<h1><span id="factory">Factory</span> Settings</h1>
-				<h1><span id="factory">Factory</span> Settings</h1>
-				<h1><span id="factory">Factory</span> Settings</h1>
+			
 			</div>
 			<div class="discipline">
-				<h1>Design Discipline</h1>
-				<h1>Design Discipline</h1>
-				<h1>Design Discipline</h1>
-				<h1>Design Discipline</h1>
-				<h1>Design Discipline</h1>
+				<h1><span id="discipline">Discipline</span></h1>
+				<h1>Design <span id="discipline">Discipline</span></h1>
+				<h1>Design <span id="discipline">Discipline</span></h1>
+				
 			</div>
 			</div>
 			<div class="container-text"><p id="subtitle">Evolution of Design Function</p></div>
