edited html header

--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
 			<div class="headertext">
 			<div class="crime">
 				<h1><span id="crime">Crime</span></h1>
-				<h1>Design & <span id="crime">Crime</span></h1>
-				<h1>Design & <span id="crime">Crime</span></h1>
-				<h1>Design & <span id="crime">Crime</span></h1>
+				<h1>Crime <span id="crime">Crime</span></h1>
+				<h1>Crime <span id="crime">Crime</span></h1>
+				<h1>Crime <span id="crime">Crime</span></h1>
 				
 			</div>
 			<div class="factory">
-				<h1><span id="factory">Factory</span> Settings</h1>
-				<h1><span id="factory">Factory</span> Settings</h1>
-				<h1><span id="factory">Factory</span> Settings</h1>
+				<h1><span id="factory">Factory</span> Factory</h1>
+				<h1><span id="factory">Factory</span> Factory</h1>
+				<h1><span id="factory">Factory</span> Factory</h1>
 			
 			</div>
 			<div class="discipline">
 				<h1><span id="discipline">Discipline</span></h1>
-				<h1>Design <span id="discipline">Discipline</span></h1>
-				<h1>Design <span id="discipline">Discipline</span></h1>
+				<h1>Discipline <span id="discipline">Discipline</span></h1>
+				<h1>Discipline <span id="discipline">Discipline</span></h1>
 				
 			</div>
 			</div>
