Added rotation to the header

--- a/index.html
+++ b/index.html
@@ -11,29 +11,23 @@
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-		<div id="navbar">
-			<a href="../"><mark>Home</mark></a>
-			<a href="../article-crime/">Crime</a>
-			<a href="../article-factory/">Factory</a>
-			<a href="../article-discipline/">Discipline</a>
-		  </div>
 		<header>
 			<div class="headertext">
 			<div class="crime">
-				<h1><span id="crime">Crime</span></h1>
+				<h1><span id="crime">&nbsp;&nbsp;&nbsp;&nbsp;Crime</span></h1>
 				<h1>Crime <span id="crime">Crime</span></h1>
 				<h1>Crime <span id="crime">Crime</span></h1>
 				<h1>Crime <span id="crime">Crime</span></h1>
 				
 			</div>
 			<div class="factory">
-				<h1><span id="factory">Factory</span> Factory</h1>
+				<h1><span id="factory">&nbsp;&nbsp;&nbsp;&nbsp;Factory</span> Factory</h1>
 				<h1><span id="factory">Factory</span> Factory</h1>
 				<h1><span id="factory">Factory</span> Factory</h1>
 			
 			</div>
 			<div class="discipline">
-				<h1><span id="discipline">Discipline</span></h1>
+				<h1><span id="discipline">&nbsp;&nbsp;Discipline</span></h1>
 				<h1>Discipline <span id="discipline">Discipline</span></h1>
 				<h1>Discipline <span id="discipline">Discipline</span></h1>
 				
@@ -41,6 +35,12 @@
 			</div>
 			<div class="container-text"><p id="subtitle">Evolution of Design Function</p></div>
 		</header>
+		<div id="navbar">
+			<a href="../"><mark>Home</mark></a>
+			<a href="../article-crime/">Crime</a>
+			<a href="../article-factory/">Factory</a>
+			<a href="../article-discipline/">Discipline</a>
+		  </div>
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
 		<div class="sticky"><h3>Intro: Evolution of Design Function</h3></div>
