--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 		</header>
 		<div id="navbar">
 			<a href="../"><mark>Home</mark></a>
-			<a href="../article-crime/">Crime</a>
-			<a href="../article-factory/">Factory</a>
-			<a href="../article-discipline/">Discipline</a>
+			<a href="../binding/article-crime/index.html">Crime</a>
+			<a href="../binding/article-factory/index.html">Factory</a>
+			<a href="../binding/article-discipline/index.html">Discipline</a>
 		  </div>
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
