edited header for article

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -13,10 +13,15 @@
 	<body>
 <!-- Main title -->
 		<header>
+			<div class="headerdiv">
 			<h1 span id="top">The Concept of</h1>
-			<h2>Design</h2>
-			<h2 span id="titlecontinue">Discipline</h2>
-			<h3 span id="author">Vol.1 &nbsp;Paul A. Rodgers&nbsp; Craig Bremner &nbsp; &nbsp; &nbsp;2017</h3>
+			<h2>Design Discipline</h2>
+		</div>
+		<div class="authordiv">
+			<h3 span id="author">Vol.1</h3>
+			<h3>Paul A. Rodgers & Craig Bremner</h3>
+			<h3>2017</h3>
+		</div>
 		</header>
 		<div id="navbar">
 			<a href="../">Home</a>
