edited the layout and the arrow sticky

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -18,8 +18,9 @@
 			<h2>Design Discipline</h2>
 		</div>
 		<div class="authordiv">
-			<h3 span id="author">Vol.1</h3>
-			<h3>Paul A. Rodgers & Craig Bremner</h3>
+			<h3>Vol.1</h3>
+			<h3>Paul A. Rodgers</h3>
+			<h3>& Craig Bremner</h3>
 			<h3>2017</h3>
 		</div>
 		</header>
