--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <html>
 	<head>
+		<title>Binding</title>
 	<!--Below is a meta element that tells the browser to render it at its actual size-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Below is a reset, it clears off browser's default style -->
-	<link href="assets/reset.css" rel="stylesheet">
+	<link href="../assets/reset.css" rel="stylesheet">
 	<!-- Below is a link to my CSS file -->
 	<!-- <link href="../assets/common.css" rel="stylesheet"> -->
 	<link href="style.css" rel="stylesheet">
