added overflow fix to landing page's header

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -16,13 +16,13 @@
 		<header>
 			<div class="headerdiv">
 			<h1 span id="top">The Concept of</h1>
-			<h2>Design Discipline</h2>
+			<h2>Design <span id="discipline">Discipline</span></h2>
 		</div>
 		<div class="authordiv">
-			<h3>Vol.1</h3>
-			<h3>Paul A. Rodgers</h3>
-			<h3>& Craig Bremner</h3>
-			<h3>2017</h3>
+			<h3 id="volume">Vol.1</h3>
+			<h3 id="author1">Paul A. Rodgers</h3>
+			<h3 id="author2">& Craig Bremner</h3>
+			<h3 id="date">2017</h3>
 		</div>
 		</header>
 		<div id="navbar">
