--- a/index.html
+++ b/index.html
@@ -14,24 +14,27 @@
 		<div class="headcontainer">
 		<header>
 			<div class="headertext">
+				<div class="crimetext">
 			<div class="crime">
 				<h1><span id="crime">&nbsp;&nbsp;&nbsp;&nbsp;Crime</span></h1>
 				<h1>Crime <span id="crime">Crime</span></h1>
 				<h1>Crime <span id="crime">Crime</span></h1>
 				<h1>Crime <span id="crime">Crime</span></h1>
-				
 			</div>
+		    </div>
+			<div class="factorytext">
 			<div class="factory">
 				<h1><span id="factory">&nbsp;&nbsp;&nbsp;&nbsp;Factory</span> Factory</h1>
 				<h1><span id="factory">Factory</span> Factory</h1>
 				<h1><span id="factory">Factory</span> Factory</h1>
-			
 			</div>
+			</div>
+			<div class="disciplinetext">
 			<div class="discipline">
 				<h1><span id="discipline">&nbsp;&nbsp;Discipline</span></h1>
 				<h1>Discipline <span id="discipline">Discipline</span></h1>
 				<h1>Discipline <span id="discipline">Discipline</span></h1>
-				
+			</div>
 			</div>
 			</div>
 			<div class="container-text"><p id="subtitle">Evolution of Design Function</p></div>
