commented out the subheading on header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 			</div>
 			</div>
-			<div class="container-text"><p id="subtitle">Evolution of Design Function</p></div>
+			<!-- <div class="container-text"><p id="subtitle">Evolution of Design Function</p></div> -->
 		</header>
 	</div>
 	<div class="navbardiv">
