edited the look for header in landing page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 				<h1>Crime <span id="crime">Crime</span></h1>
 				<h1>Crime <span id="crime">Crime</span></h1>
 				<h1>Crime <span id="crime">Crime</span></h1>
+				<h1>Crime <span id="crime">Crime</span></h1>
+				<h1>Crime <span id="crime">Crime</span></h1>
 			</div>
 		    </div>
 			<div class="factorytext">
@@ -27,11 +29,15 @@
 				<h1><span id="factory">&nbsp;&nbsp;&nbsp;&nbsp;Factory</span> Factory</h1>
 				<h1><span id="factory">Factory</span> Factory</h1>
 				<h1><span id="factory">Factory</span> Factory</h1>
+				<h1><span id="factory">Factory</span> Factory</h1>
+				<h1><span id="factory">Factory</span> Factory</h1>
 			</div>
 			</div>
 			<div class="disciplinetext">
 			<div class="discipline">
 				<h1><span id="discipline">&nbsp;&nbsp;Discipline</span></h1>
+				<h1>Discipline <span id="discipline">Discipline</span></h1>
+				<h1>Discipline <span id="discipline">Discipline</span></h1>
 				<h1>Discipline <span id="discipline">Discipline</span></h1>
 				<h1>Discipline <span id="discipline">Discipline</span></h1>
 			</div>
