added nav bar big on the right side on landing page desktop

--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+		<div class="maindivhead">
 		<div class="headcontainer">
 		<header>
 			<div class="headertext">
+				<div class="disciplinetext">
+					<div class="discipline">
+						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1>Design <span id="discipline">Evolution</span></h1>
+					</div>
+					</div>
 				<div class="crimetext">
 			<div class="crime">
 				<h1><span id="crime">&nbsp;&nbsp;&nbsp;&nbsp;Crime</span></h1>
@@ -46,6 +56,15 @@
 			<!-- <div class="container-text"><p id="subtitle">Evolution of Design Function</p></div> -->
 		</header>
 	</div>
+	<div class="titlebig">
+		<div><h1 class="otherh1">Design Evolution:<br>Crime, Factory, and Discipline</h1></div>
+		<div id="linksbig">
+		<div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div>
+		<div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div>
+		<div class="biglinkdiv"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div>
+	</div>
+	</div>
+</div>
 	<div class="navbardiv">
 		<div id="navbar">
 			<a href="../"><mark>Home</mark></a>
