fixed the header landing page desktop

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<a href="../binding/article-discipline/index.html/">Discipline</a>
 		  </div>
 		</div>
-	<div class="darkrectangle"></div>
+	<!-- <div class="darkrectangle"></div> -->
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
 		<div class="sticky1"><h3>Intro: Evolution of Design Function</h3></div>
