edited links big

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<div class="titlebig">
 		<div><h1 class="otherh1">Design Evolution:<br>Crime, Factory, and Discipline</h1></div>
 		<div id="linksbig">
-		<div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div>
+		<a href="#" id="designcrimelink"><div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div></a>
 		<div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div>
 		<div class="biglinkdiv"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div>
 	</div>
@@ -67,16 +67,16 @@
 </div>
 	<div class="navbardiv">
 		<div id="navbar">
-			<a href="../"><mark>Home</mark></a>
-			<a href="../binding/article-crime/index.html/">Crime</a>
-			<a href="../binding/article-factory/index.html/">Factory</a>
-			<a href="../binding/article-discipline/index.html/">Discipline</a>
+			<a href="../" class="mainlink"><mark>Home</mark></a>
+			<a href="../binding/article-crime/index.html/" class="mainlink">Crime</a>
+			<a href="../binding/article-factory/index.html/" class="mainlink">Factory</a>
+			<a href="../binding/article-discipline/index.html/" class="mainlink">Discipline</a>
 		  </div>
 		</div>
 	<!-- <div class="darkrectangle"></div> -->
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
-		<div class="sticky1"><h3>Intro: Evolution of Design Function</h3></div>
+		<div class="sticky1"><h3>Introduction</h3></div>
 			<section>
 				<p class="intropa">Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
 				<p>Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be designers in society and in relation to capital,” writes designer Jacob Lindgren. “A school becomes a factory producing designers, one that, in keeping with the principles of ‘good design,’ turns them into efficient and interchangeable parts ready to hit the market.” In a new essay, Lindgren proposes models that may help us undo this factory setting of graphic design.</p>
