fixed the sticky on landing page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div id="linksbig">
 		<a href="#" id="designcrimelink"><div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div></a>
 		<div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div>
-		<div class="biglinkdiv"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div>
+		<div class="biglinkdiv3rd"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div>
 	</div>
 	</div>
 </div>
