edited the nav main bar at the bottom on Discipline article

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -14,6 +14,7 @@
 	<body>
 <!-- Main title -->
 		<header>
+			<div class="2contentsheader">
 			<div class="headerdiv">
 			<h1 span id="top">The Concept of</h1>
 			<h2>Design <span id="discipline">Discipline</span></h2>
@@ -24,13 +25,16 @@
 			<h3 id="author2">& Craig Bremner</h3>
 			<h3 id="date">2017</h3>
 		</div>
+		</div>
 		</header>
-		<div id="navbar">
-			<a href="../">Home</a>
-			<a href="../article-crime/">Crime</a>
-			<a href="../article-factory/">Factory</a>
-			<a href="../article-discipline/"><mark>Discipline</mark></a>
-		  </div>
+		<div class="navbardiv">
+			<div id="navbar">
+				<a href="../" class="mainlink">Home</a>
+				<a href="../binding/article-crime/index.html/" class="mainlink">Crime</a>
+				<a href="../binding/article-factory/index.html/" class="mainlink">Factory</a>
+				<a href="../binding/article-discipline/index.html/" class="mainlink"><mark>Discipline</mark></a>
+			  </div>
+			</div>
 		  <div id="backtotop">
 			<a href="#top" span id="arrow">&#x21E7;</a>
 		</div>
