took out the line in the volume and year div

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -20,7 +20,7 @@
 			<h2>Design <span id="discipline">Discipline</span></h2>
 		</div>
 		<div class="authordiv">
-			<h3 id="volume">Vol.1 | 2017</h3>
+			<h3 id="volume">Vol.1, 2017</h3>
 			<h3 id="author1">Paul A. Rodgers</h3>
 			<h3 id="author2">Craig Bremner</h3>
 		</div>
