--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -20,12 +20,14 @@
 		</div>
 			<h3>Jacob Lindgren &nbsp; &nbsp; &nbsp;2020</h3>
 		</header>
-		<div id="navbar">
-			<a href="../">Home</a>
-			<a href="../article-crime/">Crime</a>
-			<a href="../article-factory/"><mark>Factory</mark></a>
-			<a href="../article-discipline/">Discipline</a>
-		  </div>
+		<div class="navbardiv">
+			<div id="navbar">
+				<a href="../" class="mainlink">Home</a>
+				<a href="../binding/article-crime/index.html/" class="mainlink">Crime</a>
+				<a href="../binding/article-factory/index.html/" class="mainlink"><mark>Factory</mark></a>
+				<a href="../binding/article-discipline/index.html/" class="mainlink">Discipline</a>
+			  </div>
+			</div>
 		  <div id="backtotop">
 			<a href="#top" span id="arrow">&#x21E7;</a>
 		</div>
