changed styling on sticky

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -62,7 +62,7 @@
 			<p class="topspace">As a way forward for the discipline of design, the authors propose an ‘alterplinary’manifesto (a portmanteau of ‘alternative’ and ‘disciplinary’). Alterplinarity is the condition contemporary design finds itself in.<sup>17</sup> The fluid, evolving muddle of practice that regularly cross, exceed and alter historical disciplinary and conceptual boundaries has resulted in research, education, and practice that is constantly shifting, creating, contesting and negotiating new terrains of opportunities and re-shaping the boundaries of design.</p>
 			<p class="bigtext1">This “other” dimension<sup>18</sup> or, as we propose, an “alternative disciplinarity”—an “alterplinarity” that does not rely on historic disciplines of design as the boundaries of our understanding has been superseded.</p>
 			<p>The digital has modified the models of design thought and action, and, as a result, research and practice should transform from a convention domesticated by the academy to a reaction to globalization that is yet to be disciplined.</p>
-	<div class="stickytitle"><h3>This Is The ‘Alterplinary’ Manifesto:</h3></div>
+	<div class="stickytitledark"><h3>This Is The ‘Alterplinary’ Manifesto:</h3></div>
 	<div class="stickytitle2"><h4>01 Dispose Carefully of What You Know</h4></div>
 	<section class="frontsection">
 		<p>All design thought and action should emanate from a point of not knowing. Socrates, the Greek philosopher, is attributed to have said that:</p>
