fixed the links between pages

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -20,9 +20,9 @@
 		</header>
 		<div id="navbar">
 			<a href="../">Home</a>
-			<a href="../article-crime/"><mark>Crime</mark></a>
-			<a href="../article-factory/">Factory</a>
-			<a href="../article-discipline/">Discipline</a>
+			<a href="/article-crime/index.html"><mark>Crime</mark></a>
+			<a href="/article-factory/index.html">Factory</a>
+			<a href="/article-discipline/index.html">Discipline</a>
 		  </div>
 		  <div id="backtotop">
 			<a href="#top" span id="arrow">&#x21E7;</a>
