--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -22,10 +22,10 @@
 		</header>
 		<div class="navbardiv">
 			<div id="navbar">
-				<a href="../" class="mainlink">Home</a>
-				<a href="../binding/article-crime/index.html/" class="mainlink">Crime</a>
-				<a href="../binding/article-factory/index.html/" class="mainlink"><mark>Factory</mark></a>
-				<a href="../binding/article-discipline/index.html/" class="mainlink">Discipline</a>
+				<a href="/index.html" class="mainlink">Home</a>
+				<a href="/article-crime/index.html" class="mainlink">Crime</a>
+				<a href="/article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
+				<a href="/article-discipline/index.html" class="mainlink">Discipline</a>
 			  </div>
 			</div>
 		  <div id="backtotop">
