edited the links again

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -7,7 +7,7 @@
 	<!-- Below is a reset, it clears off browser's default style -->
 	<link href="assets/reset.css" rel="stylesheet">
 	<!-- Below is a link to my CSS file -->
-	<link href="../assets/common.css" rel="stylesheet">
+	<link href="/assets/common.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
