moved common css and reset out of the folder

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -5,9 +5,9 @@
 	<!--Below is a meta element that tells the browser to render it at its actual size-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Below is a reset, it clears off browser's default style -->
-	<link href="assets/reset.css" rel="stylesheet">
+	<link href="/reset.css" rel="stylesheet">
 	<!-- Below is a link to my CSS file -->
-	<link href="/assets/common.css" rel="stylesheet">
+	<link href="/common.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
