edited the links again

--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
 	<div class="titlebig">
 		<div><h1 class="otherh1">Design Evolution:<br>Crime, Factory, and Discipline</h1></div>
 		<div id="linksbig">
-		<a href="/article-crime/index.html" id="designcrimelink"><div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div></a>
-		<a href="/article-factory/index.html"><div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div></a>
-		<a href="/article-discipline/index.html"><div class="biglinkdiv3rd"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div></a>
+		<a href="article-crime/index.html" id="designcrimelink"><div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div></a>
+		<a href="article-factory/index.html"><div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div></a>
+		<a href="article-discipline/index.html"><div class="biglinkdiv3rd"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div></a>
 	</div>
 	</div>
 </div>
 	<div class="navbardiv">
 		<div id="navbar">
-			<a href="/index.html" class="mainlink"><mark>Home</mark></a>
-			<a href="/article-crime/index.html" class="mainlink">Crime</a>
-			<a href="/article-factory/index.html" class="mainlink">Factory</a>
-			<a href="/article-discipline/index.html" class="mainlink">Discipline</a>
+			<a href="index.html" class="mainlink"><mark>Home</mark></a>
+			<a href="article-crime/index.html" class="mainlink">Crime</a>
+			<a href="article-factory/index.html" class="mainlink">Factory</a>
+			<a href="article-discipline/index.html" class="mainlink">Discipline</a>
 		  </div>
 		</div>
 	<!-- <div class="darkrectangle"></div> -->
